--- a/Portfolio/src/styles/index.css
+++ b/Portfolio/src/styles/index.css
@@ -68,7 +68,7 @@ html {
 body {
   font-size: 1.6rem;
   font-weight: 400;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.5;
 
   color: var(--input-text);
