feat: create Button component and add button component to hero component with redirect to about me

--- a/Portfolio/src/ui/GoToTopButton/GoToTopButton.module.css
+++ b/Portfolio/src/ui/GoToTopButton/GoToTopButton.module.css
@@ -31,5 +31,5 @@
 .button:hover {
   color: var(--text-primary-light);
 
-  border: 2px solid var(--accent-purple);
+  border: 2px solid var(--accent-purple-dark);
 }
