--- a/Portfolio/src/ui/Hero/Hero.module.css
+++ b/Portfolio/src/ui/Hero/Hero.module.css
@@ -4,6 +4,10 @@
   & > p {
     line-height: 100%;
   }
+
+  button {
+    margin-top: 2.5rem;
+  }
 }
 
 .greeting {
@@ -27,7 +31,23 @@
   font-weight: 500;
   color: var(--text-primary);
 
-  margin-bottom: 1rem;
+  margin-bottom: 1.25rem;
+}
+
+.highlight {
+  position: relative;
+}
+
+.highlight::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+
+  width: 100%;
+  height: 4px;
+
+  background-color: var(--accent-purple-light);
 }
 
 .subtext {
