--- a/Portfolio/src/ui/Hero/Hero.module.css
+++ b/Portfolio/src/ui/Hero/Hero.module.css
@@ -34,8 +34,24 @@
   margin-bottom: 1.25rem;
 }
 
+.highlight,
+.highlight::after {
+  background: radial-gradient(
+    circle,
+    var(--accent-purple-light),
+    var(--accent-purple),
+    var(--accent-purple-dark)
+  );
+  animation: colorSwap 15s linear infinite;
+  background-size: 200%;
+}
+
 .highlight {
   position: relative;
+  display: inline-block;
+
+  background-clip: text;
+  color: transparent;
 }
 
 .highlight::after {
@@ -46,8 +62,12 @@
 
   width: 100%;
   height: 4px;
+}
 
-  background-color: var(--accent-purple-light);
+@keyframes colorSwap {
+  to {
+    background-position: 200%;
+  }
 }
 
 .subtext {
