--- a/Portfolio/src/ui/Logo/Logo.module.css
+++ b/Portfolio/src/ui/Logo/Logo.module.css
@@ -3,4 +3,9 @@
 
   align-items: center;
   gap: 1rem;
+
+  text-decoration: none;
+  color: var(--text-primary);
+  font-size: 2rem;
+  font-weight: 500;
 }
