--- a/Portfolio/src/features/AboutMe/IntroduceMySelf/Introduce.module.css
+++ b/Portfolio/src/features/AboutMe/IntroduceMySelf/Introduce.module.css
@@ -6,24 +6,69 @@
 .image_box {
   flex: 0 0 15rem;
 
-  border: 3px solid var(--dar);
   border-radius: 6px;
   overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+
+  gap: 2rem;
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2.5rem;
+  font-size: 2.8rem;
+
+  svg {
+    width: 1.5em;
+    height: 1.5em;
+    cursor: pointer;
+
+    transition: color 0.4s;
+  }
+
+  svg:hover {
+    color: var(--hover-red);
+  }
 }
 
 .introduce_box {
   color: var(--text-primary-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   .introduce_header {
     font-size: 4.8rem;
     font-weight: 600;
+    line-height: 100%;
 
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 
   .introduce_text {
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: 500;
-    margin: 1rem 0;
+    margin-top: rem;
+  }
+
+  .hr_box {
+    position: relative;
+
+    .line_hr {
+    }
+
+    .cube {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+
+      background-color: var(--bg-color);
+
+      transform: translate(-50%, -50%);
+    }
   }
 }
