--- a/Portfolio/src/ui/Logo/Logo.module.css
+++ b/Portfolio/src/ui/Logo/Logo.module.css
@@ -1,11 +1,20 @@
+.logo {
+}
+
 .logo_link {
   display: flex;
-
   align-items: center;
-  gap: 1rem;
+  justify-content: center;
 
   text-decoration: none;
   color: var(--text-primary);
   font-size: 2rem;
   font-weight: 500;
+
+  width: 4.8rem;
+  height: 4.8rem;
+
+  border-radius: 50%;
+
+  border: 1px solid red;
 }
