--- a/Portfolio/src/styles/index.css
+++ b/Portfolio/src/styles/index.css
@@ -51,7 +51,7 @@ html {
 body {
   font-size: 1.6rem;
   font-weight: 400;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.5;
 
   color: var(--text-primary);
