--- a/Portfolio/src/ui/Header/Header.module.css
+++ b/Portfolio/src/ui/Header/Header.module.css
@@ -8,9 +8,9 @@
   left: 0;
 
   width: 100%;
-  height: 6.2rem;
+  height: 72px;
 
-  padding: 0.5rem 5rem;
+  padding: 0.5rem 5rem 1rem;
 
   background-color: var(--bg-color);
   border-bottom: 2px solid var(--text-primary);
