--- a/Portfolio/src/ui/Button/Button.module.css
+++ b/Portfolio/src/ui/Button/Button.module.css
@@ -13,6 +13,30 @@
   border-radius: 4px;
 }
 
+.primary {
+  background-color: var(--accent-red);
+  color: var(--text-primary-light);
+
+  box-shadow: 0 6px 12px var(--shadow-red);
+
+  transition: all 0.4s;
+}
+
+.primary:hover,
+.primary:focus {
+  background-color: var(--hover-red);
+  color: var(--text-primary);
+
+  box-shadow: 0 6px 12px var(--shadow-red-hover);
+}
+
+.primary:active {
+  background-color: var(--active-red);
+  color: var(--text-primary-light);
+
+  box-shadow: 0 6px 12px var(--shadow-red);
+}
+
 .outline-primary-icon {
   display: flex;
   align-items: center;
@@ -20,17 +44,43 @@
   gap: 1rem;
 
   background: none;
-  color: white;
-  border: 2px solid red;
+  color: var(--text-primary-light);
+  border: 6px double var(--accent-red);
   border-radius: 100px;
+
+  box-shadow: 0 4px 12px var(--shadow-red);
+
+  transition: all 0.4s;
 
   svg {
     width: 3.2rem;
     height: 3.2rem;
     vertical-align: middle;
-    color: white;
+    color: var(--text-primary-light);
+
+    transition: all 0.4s;
   }
 }
 
-.outline-primary {
+.outline-primary-icon:hover,
+.outline-primary-icon:focus {
+  border: 6px double var(--hover-red);
+  color: var(--text-primary);
+
+  box-shadow: 0 4px 12px var(--shadow-red-hover);
+
+  svg {
+    color: var(--text-primary);
+  }
+}
+
+.outline-primary-icon:active {
+  background-color: var(--active-red);
+  color: var(--text-primary-light);
+
+  box-shadow: 0 4px 12px var(--shadow-red);
+
+  svg {
+    color: var(--text-primary-light);
+  }
 }
