--- a/Portfolio/src/ui/Hero/Hero.module.css
+++ b/Portfolio/src/ui/Hero/Hero.module.css
@@ -8,30 +8,44 @@
   button {
     margin-top: 2.5rem;
   }
+
+  h1 {
+    font-size: 1.6rem;
+
+    margin-bottom: 1.85rem;
+
+    line-height: 1;
+  }
 }
 
 .greeting {
+  display: inline-block;
+
   font-size: 2.4rem;
   font-weight: 600;
 
   color: var(--text-primary-dark);
+
   margin-bottom: 0.25rem;
 }
 
 .name {
+  display: inline-block;
   font-size: 7.2rem;
   font-weight: 500;
 
   color: var(--text-primary-light);
-  margin-bottom: 0.5rem;
+
+  margin-left: -3px;
 }
 
 .profession {
+  display: inline-block;
   font-size: 4.8rem;
   font-weight: 500;
   color: var(--text-primary);
 
-  margin-bottom: 1.25rem;
+  margin-top: 1.5rem;
 }
 
 .highlight,
@@ -57,17 +71,11 @@
 .highlight::after {
   content: "";
   position: absolute;
-  bottom: -3px;
+  bottom: -4px;
   left: 0;
 
   width: 100%;
   height: 4px;
-}
-
-@keyframes colorSwap {
-  to {
-    background-position: 200%;
-  }
 }
 
 .subtext {
@@ -75,5 +83,14 @@
   color: var(--text-primary-dark);
   line-height: 1.3 !important;
 
-  max-width: 60rem;
+  max-width: 45ch;
+  text-wrap: wrap;
+
+  margin-bottom: 3rem;
+}
+
+@keyframes colorSwap {
+  to {
+    background-position: 200%;
+  }
 }
