--- a/Portfolio/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/Portfolio/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -3,4 +3,14 @@
 
   font-size: 4.8rem;
   font-weight: 600;
+  text-transform: capitalize;
+}
+
+.projects_wrapper {
+  max-width: 125rem;
+  margin: 0 auto;
+}
+
+.projects {
+  margin-top: 7.5rem;
 }
