--- a/Portfolio/src/features/AboutMe/IntroduceMySelf/Introduce.module.css
+++ b/Portfolio/src/features/AboutMe/IntroduceMySelf/Introduce.module.css
@@ -46,7 +46,9 @@
     font-weight: 600;
     line-height: 100%;
 
-    margin-bottom: 1rem;
+    margin-bottom: 1.25rem;
+
+    text-align: center;
   }
 
   .introduce_text {
@@ -55,22 +57,5 @@
     text-align: justify;
 
     max-width: 65ch;
-  }
-
-  .hr_box {
-    position: relative;
-
-    .line_hr {
-    }
-
-    .cube {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-
-      background-color: var(--bg-color);
-
-      transform: translate(-50%, -50%);
-    }
   }
 }
