--- a/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
+++ b/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
@@ -181,13 +181,12 @@
 
   gap: 1rem;
 
-  background-color: var(--text-primary-light);
-  color: var(--bg-color-dark);
-
   padding: 0.75rem 1.5rem;
+
+  border: 2px solid var(--text-primary-light);
   border-radius: 6px;
 
-  box-shadow: 0 4px 6px var(--text-primary-light);
+  box-shadow: 0 4px 8px var(--text-primary-light);
 
   transition: all 0.4s;
 }
