--- a/Portfolio/src/features/AboutMe/TechnologyStack/TechnologyItem/TechnologyItem.module.css
+++ b/Portfolio/src/features/AboutMe/TechnologyStack/TechnologyItem/TechnologyItem.module.css
@@ -5,7 +5,7 @@
   position: relative;
   user-select: none;
 
-  background: rgba(255, 255, 255, 0.05);
+  background: #ffffff0d;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(13.2px);
