--- a/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
+++ b/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
@@ -172,23 +172,16 @@
   align-items: center;
   flex-wrap: wrap;
 
-  gap: 2rem;
+  gap: 4rem;
 }
 
 .technology {
   display: flex;
   align-items: center;
 
-  gap: 1rem;
+  gap: 0.75rem;
 
-  padding: 0.75rem 1.5rem;
-
-  border: 2px solid var(--text-primary-light);
-  border-radius: 6px;
-
-  box-shadow: 0 4px 8px var(--text-primary-light);
-
-  transition: all 0.4s;
+  padding: 0.75rem 0;
 }
 
 .icon {
