--- a/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
+++ b/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
@@ -39,14 +39,47 @@
   border-radius: 12px;
 
   overflow: hidden;
+
+  position: relative;
+}
+
+.image_link {
+  position: relative;
 }
 
 .image {
   transition: all 0.6s;
 }
 
-.image:hover {
+.image_link:hover .image {
   transform: scale(1.05);
+}
+
+.image_link::before {
+  position: absolute;
+  content: "\01F441";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(7, 7, 7, 0.282);
+  color: var(--text-primary-light);
+
+  z-index: 1;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 7.5rem;
+
+  opacity: 0;
+
+  transition: all 0.4s;
+}
+
+.image_link:hover::before {
+  opacity: 1;
 }
 
 .row_container {
