--- a/Portfolio/src/ui/Layout/Layout.module.css
+++ b/Portfolio/src/ui/Layout/Layout.module.css
@@ -7,9 +7,11 @@
 
   margin-top: 72px;
   min-height: calc(100dvh - 72px);
+
+  /* row-gap: 10rem; */
 }
 
 .main {
   position: relative;
-  margin: 3rem 5rem 3rem;
+  margin: 3rem 5rem 0;
 }
