--- a/Portfolio/src/styles/index.css
+++ b/Portfolio/src/styles/index.css
@@ -4,7 +4,7 @@
   --bg-color-light: #1a1a1a; /* Jaśniejszy odcień czerni */
   --bg-color-dark: #080808; /* Głębsza czerń */
 
-  --bg-color-dark-2: #07070748;
+  --bg-color-dark-2: #0707078c;
 
   --filter-bg: #2a2a2a;
   --filter-hover: #fff;
@@ -82,7 +82,8 @@ body {
   line-height: 1.5;
 
   color: var(--text-primary-light);
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
+  background: url(/public/background2.svg);
 
   scroll-behavior: smooth;
 }
