--- a/Portfolio/src/ui/Header/Header.module.css
+++ b/Portfolio/src/ui/Header/Header.module.css
@@ -12,7 +12,9 @@
 
   padding: 0.5rem 5rem 1rem;
 
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
+
+  backdrop-filter: blur(2px);
 
   z-index: 9999;
 }
