--- a/Portfolio/src/features/AboutMe/IntroduceMySelf/Introduce.module.css
+++ b/Portfolio/src/features/AboutMe/IntroduceMySelf/Introduce.module.css
@@ -22,6 +22,11 @@
   gap: 2.5rem;
   font-size: 2.8rem;
 
+  a:link,
+  a:visited {
+    color: unset;
+  }
+
   svg {
     width: 1.5em;
     height: 1.5em;
