--- a/Portfolio/src/ui/Navigation/Navigation.module.css
+++ b/Portfolio/src/ui/Navigation/Navigation.module.css
@@ -2,3 +2,31 @@
   display: flex;
   gap: 2rem;
 }
+
+@media screen and (max-width: 515px) {
+  .navigation {
+    width: 100%;
+  }
+
+  .navigation_list {
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .navigation {
+    width: 100%;
+  }
+
+  .navigation_list {
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .navigation_list {
+    gap: 1rem;
+  }
+}
