--- a/Portfolio/src/pages/Homepage/Homepage.module.css
+++ b/Portfolio/src/pages/Homepage/Homepage.module.css
@@ -69,6 +69,19 @@
 }
 
 @media screen and (max-width: 1400px) {
+  .img {
+    width: 75%;
+  }
+
+  .img_box::after,
+  .img_box::before {
+    width: 100%;
+    height: 110%;
+  }
+
+  .homepage {
+    gap: 0.5rem;
+  }
 }
 
 @media screen and (max-width: 1175px) {
