--- a/Portfolio/src/ui/Footer/Footer.module.css
+++ b/Portfolio/src/ui/Footer/Footer.module.css
@@ -38,3 +38,70 @@
 .link:active {
   color: var(--active-red);
 }
+
+@media screen and (max-width: 985px) {
+  .footer {
+    padding: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 930px) {
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+    row-gap: 3rem;
+
+    & > *:nth-child(1) {
+      grid-column: 1/-1;
+    }
+
+    & > *:nth-child(2) {
+      grid-row: 1/2;
+    }
+
+    & > *:nth-child(3) {
+      grid-column: 2/3;
+      grid-row: 1/1;
+
+      justify-self: end;
+    }
+  }
+
+  .link_wrapper {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 930px) {
+  .footer {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+
+    grid-template-columns: 1fr;
+    column-gap: 2rem;
+    row-gap: 3rem;
+
+    & > *:nth-child(1) {
+      grid-column: unset;
+    }
+
+    & > *:nth-child(2) {
+      grid-row: unset;
+    }
+
+    & > *:nth-child(3) {
+      grid-column: unset;
+      grid-row: unset;
+
+      justify-self: unset;
+    }
+  }
+
+  .link_wrapper {
+    width: 100%;
+    text-align: center;
+  }
+}
