--- a/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
+++ b/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
@@ -203,31 +203,45 @@
 }
 
 .technologies {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-
-  gap: 4rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, max-content));
+  column-gap: 2.5rem;
+  row-gap: 0.5rem;
 }
 
-.technology {
-  display: flex;
-  align-items: center;
+@media screen and (max-width: 985px) {
+  .header {
+    h2 {
+      font-size: 3.6rem;
+      font-weight: 500;
+      letter-spacing: 2px;
+    }
 
-  gap: 0.75rem;
+    h3 {
+      font-size: 2.4rem;
+      font-weight: 300;
+      letter-spacing: 1px;
 
-  padding: 0.75rem 0;
+      color: var(--text-primary-dark);
+    }
+  }
+
+  .project_wrapper {
+    padding: 2rem 3rem;
+  }
+
+  .description {
+    font-size: 1.8rem;
+  }
 }
 
-.icon {
-  width: 3.2rem;
-}
+@media screen and (max-width: 700px) {
+  .description_wrapper {
+    flex-direction: column;
+    gap: 2rem;
+  }
 
-.filter_name {
-  display: inline-block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 0.75px;
-
-  user-select: none;
+  .link_wrapper {
+    flex-direction: row;
+  }
 }
