--- a/Portfolio/src/features/GitHubContribution/GitHubContribution.module.css
+++ b/Portfolio/src/features/GitHubContribution/GitHubContribution.module.css
@@ -9,3 +9,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 575px) {
+  .github_wrapper {
+    display: none;
+  }
+}
