--- a/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
+++ b/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
@@ -204,7 +204,10 @@
 
 .technologies {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, max-content));
+  grid-template-columns: repeat(auto-fill, minmax(100px, max-content));
+  align-items: center;
+  justify-items: center;
+
   column-gap: 2.5rem;
   row-gap: 0.5rem;
 }
@@ -243,5 +246,38 @@
 
   .link_wrapper {
     flex-direction: row;
+  }
+
+  .project_wrapper {
+    border: 6px inset var(--bg-color-dark-2);
+    border-left: none;
+    border-right: none;
+
+    padding: 2rem 1rem;
+    border-radius: 6px;
+
+    box-shadow: unset;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .header {
+    h2 {
+      font-size: 3rem;
+      font-weight: 600;
+    }
+  }
+
+  .description {
+    font-size: 1.6rem;
+  }
+}
+
+@media screen and (max-width: 405px) {
+  .header {
+    h2 {
+      font-size: 2.6rem;
+      font-weight: 600;
+    }
   }
 }
