--- a/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
+++ b/Portfolio/src/features/ProjectsPage/ProjectCard.module.css
@@ -203,10 +203,8 @@
 }
 
 .technologies {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, max-content));
-  align-items: center;
-  justify-items: center;
+  display: flex;
+  flex-wrap: wrap;
 
   column-gap: 2.5rem;
   row-gap: 0.5rem;
