--- a/Portfolio/src/features/ProjectsPage/ProjectTechnology/ProjectTechnology.module.css
+++ b/Portfolio/src/features/ProjectsPage/ProjectTechnology/ProjectTechnology.module.css
@@ -4,7 +4,9 @@
 
   gap: 0.75rem;
 
-  padding: 0.75rem 0;
+  background-color: var(--bg-color-light);
+  padding: 0.75rem 1rem;
+  border-radius: 6px;
 }
 
 .icon {
