--- a/Portfolio/src/styles/index.css
+++ b/Portfolio/src/styles/index.css
@@ -70,6 +70,10 @@
   box-sizing: inherit;
 }
 
+*:focus-within {
+  outline-offset: 3px !important;
+}
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
